[gradle] Add task to run performance test
Automatically downloads books from Project Gutenberg